[project]
name = "passworder"
requires-python = ">=3.11"
description = "Secure and user-friendly password storage manager."
readme = "README.md"
authors = [
    { name = 'creaexo"', email = 'creaexo@gmail.com' },
]
dependencies = [
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.42"
]