[project]
name = "passworder"
version = "0.0.1"
requires-python = ">=3.11"
description = "Secure and user-friendly password storage manager."
readme = "README.md"
authors = [
    { name = 'creaexo"', email = 'creaexo@gmail.com' },
]
dependencies = [
    "cryptography==45.0.5",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.42"
]